Add refresh jwt endpoint
